--- a/styles/blocks/button.scss
+++ b/styles/blocks/button.scss
@@ -1,7 +1,7 @@
 .button {
   outline: none;
   border: none;
-  
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,7 +11,7 @@
   height: 48px;
 
   padding: 0 18px;
-  
+
   font-size: 18px;
   font-weight: 700;
   line-height: 13px;
@@ -32,5 +32,23 @@
     color: #3040c4;
 
     background-color: #ffffff;
+  }
+}
+
+input.button_white {
+  border: 1px solid #2b292d33;
+
+  @include onDesktop {
+    min-width: 385px;
+  }
+
+  &::placeholder {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
+
+    text-align: center;
+
+    color: $text-grey;
   }
 }
