--- a/styles/blocks/content.scss
+++ b/styles/blocks/content.scss
@@ -1,8 +1,7 @@
 .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  @include flexColumn;
+  justify-content: center;
+  align-items: center;
 
   &_isIt {
     background-color: #f4f5f7;
@@ -13,9 +12,9 @@
   }
 
   &_order {
-    background-color: #f4f5f7;;  
+    background-color: #f4f5f7;
   }
-  
+
   @include onDesktop {
     flex-direction: row;
     justify-content: center;
@@ -33,9 +32,9 @@
       justify-content: space-between;
       flex: 1;
 
-      max-width: 1400px;
+      max-width: $breakpoint;
       height: 255px;
-        
+
       padding: 77px 130px 77px 130px;
     }
   }
@@ -44,8 +43,7 @@
     max-width: 320px;
 
     @include onDesktop {
-      max-width: 1400px;
-      
+      max-width: $breakpoint;
 
       padding: 77px 0;
     }
@@ -57,23 +55,23 @@
     padding: 50px 15px;
 
     @include onDesktop {
-      max-width: 1400px;
-  
+      max-width: $breakpoint;
+
       padding: 108px 130px 140px 130px;
     }
   }
 
   &__order {
     width: 100vw;
-    
+
     padding: 50px 15px;
 
     @include onDesktop {
       display: flex;
       flex-direction: row;
 
-      max-width: 1400px;
-    
+      max-width: $breakpoint;
+
       padding: 106px 230px 70px 170px;
     }
   }
