--- a/styles/blocks/footer.scss
+++ b/styles/blocks/footer.scss
@@ -1,29 +1,67 @@
 .footer {
-  display: flex;
-  flex-direction: column;
+  @include flexColumn;
   align-items: center;
 
   width: 100vw;
 
   &__content {
-    display: flex;
-    flex-direction: column;
+    @include flexColumn;
     align-items: center;
-
-    
 
     padding: 40px 15px 25px 15px;
 
     @include onDesktop {
       flex-direction: row;
       align-items: flex-start;
-      
+
       flex-wrap: wrap;
       flex: 1;
 
-      max-width: 1400px;
+      max-width: $breakpoint;
 
-      padding: 60px  132px 0 130px;
+      padding: 60px 132px 0 130px;
+    }
+  }
+
+  &__section {
+    @include flexColumn;
+
+    width: 100%;
+
+    margin-bottom: 30px;
+
+    &_logo {
+      align-items: center;
+
+      @include onDesktop {
+        width: 360px;
+
+        margin-right: 124px;
+      }
+    }
+
+    &_product {
+      align-items: flex-start;
+
+      max-width: 290px;
+      width: 100%;
+
+      @include onDesktop {
+        width: 265px;
+
+        margin-right: 30px;
+      }
+    }
+
+    &_company {
+      align-items: flex-start;
+
+      max-width: 290px;
+      width: 100%;
+
+      @include onDesktop {
+        width: 265px;
+      }
     }
   }
 }
