--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .header {
@@ -240,6 +241,7 @@
 }
 .menu__link-name {
   width: 100px;
+  font-size: 18px;
   cursor: pointer;
 }
 .menu__link-img {
@@ -342,7 +344,7 @@
 }
 
 input.button_white {
-  border: 1px solid #2b292d33;
+  border: 1px solid rgba(43, 41, 45, 0.2);
 }
 @media (min-width: 1400px) {
   input.button_white {
@@ -355,6 +357,11 @@ input.button_white::placeholder {
   line-height: 20px;
   text-align: center;
   color: #2b292d;
+}
+@media (min-width: 1400px) {
+  input.button_white::placeholder {
+    text-align: left;
+  }
 }
 
 .picture {
@@ -412,14 +419,14 @@ input.button_white::placeholder {
     justify-content: center;
   }
 }
-.content__isIt {
+.content__itIs {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 46px 15px;
 }
 @media (min-width: 1400px) {
-  .content__isIt {
+  .content__itIs {
     flex-direction: row;
     justify-content: space-between;
     flex: 1;
@@ -570,7 +577,7 @@ input.button_white::placeholder {
   font-size: 24px;
   line-height: 34px;
   text-align: left;
-  margin-bottom: 30px;
+  margin-bottom: 80px;
 }
 @media (min-width: 1400px) {
   .indent_order {
@@ -590,7 +597,7 @@ input.button_white::placeholder {
     font-size: 18px;
     line-height: 26px;
     color: #2b292d;
-    margin: -90px 0 25px 85px;
+    margin: -90px 0 25px 65px;
   }
 }
 
@@ -673,7 +680,7 @@ input.button_white::placeholder {
 }
 @media (min-width: 1400px) {
   .gallery_footer {
-    margin-left: -20px;
+    margin-left: -35px;
   }
 }
 .gallery_media {
