--- a/styles/blocks/content.scss
+++ b/styles/blocks/content.scss
@@ -4,15 +4,15 @@
   align-items: center;
 
   &_isIt {
-    background-color: #f4f5f7;
+    background-color: $greyStyle;
   }
 
   &_audience {
-    background-color: #edf8fb;
+    background-color: $whiteStyle;
   }
 
   &_order {
-    background-color: #f4f5f7;
+    background-color: $greyStyle;
   }
 
   @include onDesktop {
@@ -20,7 +20,7 @@
     justify-content: center;
   }
 
-  &__isIt {
+  &__itIs {
     display: flex;
     flex-direction: column;
     align-items: center;
